packages/shulker-operator/src/reconcilers/minecraft_cluster/snapshots/shulker_operator__reconcilers__minecraft_cluster__proxy_role_binding__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_cluster/proxy_role_binding.rs
expression: role_binding
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: cluster
    app.kubernetes.io/name: my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
  name: "shulker:my-cluster:proxy"
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: "shulker:my-cluster:proxy"
subjects:
  - kind: ServiceAccount
    name: shulker-my-cluster-proxy
    namespace: default

